# python-sdk

./: .gitignore  README.md  pyproject.toml  railway.basics.json  railway.gear.json  railway.pantry.json
.cursor/skills/wire-genko-sdk/: SKILL.md
docs/: AGENT_INTEGRATION.md  CODING_AGENT_PROMPT.md  PLATFORM_INTEGRATION.md  SDK_PRD.md
examples/: Dockerfile.basics  Dockerfile.gear  Dockerfile.pantry  agent_client.py  basics_store.py  demo_store.py  gear_store.py  pantry_store.py
genko/: __init__.py  adapter.py  app.py  auth.py  catalog.py  engine.py  mcp.py  profile.py  rest.py
scripts/: run_demo_store.ps1
tests/: test_catalog.py  test_checkout_lifecycle.py  test_platform_accreditation.py
ucp_merchant/: __init__.py  adapter.py  app.py  catalog.py  engine.py  models.py  platform.py  profile.py
